<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">赛马娘同人集中楼大书库</string>

    <string name="action_settings">管理处</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Umamusume Doujinshi Library</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="home">书海</string>
    <string name="my_favorites">个人文库</string>
    <string name="thanks">纪念碑</string>
    <string name="collections">总目表</string>
    <string name="search">搜索</string>
    <string name="recommend">推荐</string>
    <string name="open_menu">打开菜单</string>
    <string name="next_page">下一页</string>
    <string name="last_page">上一页</string>
    <string name="total_page_num">总页数</string>
    <string name="page_num">页数</string>
    <string name="search_settings">搜索选项</string>
    <string name="select">选择</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="search_hint">请输入搜索关键词</string>
    <string name="prepare_database">加载数据库</string>
    <string name="progress">进度</string>
    <string name="refresh">重置</string>
    <string name="tag_label">选择需要检索的标签</string>
    <string name="tag_except_label">选择需要筛去的标签</string>
    <string name="creator_label">选择作者/译者</string>
    <string name="selected_tags">已选标签：</string>
    <string name="prepare_database_hint">本数据库保存在应用本地，为未联网的内嵌数据库，加载期间不消耗流量。仅第一次打开应用或数据库版本更新时需要加载，后续无需加载。</string>
    <string name="title_activity_reader">作品加载中……</string>
    <string name="no_data">暂无数据！</string>
    <string name="collect">收藏</string>
    <string name="collect_success">收藏成功！</string>
    <string name="collect_fail">收藏失败！</string>
    <string name="cancel_collect_success">取消收藏成功！</string>
    <string name="cancel_collect_fail">取消收藏失败！</string>
    <string name="reader_setting">阅读界面设置</string>
    <string name="font_size">字体大小</string>
    <string name="segment_space">段落间距</string>
    <string name="text_preview">大书库真是太好用了！</string>
    <string name="reader_setting_fail">样式设置失败！</string>
    <string name="copyright">本数据库中的所有原创内容版权归其作者所有，翻译内容版权归原作者与译者所有，请在非商业使用前征得对应版权所有者的同意。</string>
    <string name="copyright_warning">除版权所有者外，任何人不得将本程序与数据库中的任何内容用于任何商业用途或盈利行为！</string>
    <string name="staff_title">Staff</string>
    <string name="sponsor">主催</string>
    <string name="programmer">程序</string>
    <string name="record_assist">录入协助</string>
    <string name="record_single">散篇收录</string>
    <string name="record_check">复核协助</string>
    <string name="other_creator">其他译者/作者</string>
    <string name="sponsor_content">黑羽仙洛 | ChibaNils | 风之低吟</string>
    <string name="programmer_content">ForeverDdB | 风之低吟</string>
    <string name="record_assist_content">byslm | ChibaNils | ken啊我 | NagatoSnake | nameabcd | STROHEIM | Takatoshi | Tye_sine | z2566687 | 万碎碎碎碎碎 | 千綿奏 | 女人的名字 | 风之低吟 | 东方季枫 | 华生宇 | 进击的南村群童 | 南极洲老土著 | 陨落赤炎 | 莫名的不知火 | 提里奥·屠鸡者 | 黑羽仙洛</string>
    <string name="record_single_content">黑羽仙洛 | 风之低吟 | ChibaNils | byslm | Alanポポ | 提里奥·屠鸡者 | 盈盈星尘 | 女人的名字 | NagatoSnake</string>
    <string name="record_check_content">我就是雷gay的化身 | nameabcd</string>
    <string name="no_update">您已经是最新版本啦！</string>
    <string name="check_update">检查更新</string>
    <string name="app_description">赛马娘同人集中楼大书库(简称大书库)为一个能够读取翻译楼内容数据库的、配有良好用户界面的本地阅读器软件。</string>
    <string name="app_database_intro">丰富的内置数据库</string>
    <string name="app_database_description">内置数千篇曾在翻译楼内发布的翻译与原创内容，并会随软件持续更新。</string>
    <string name="app_view_intro">简洁美观的阅读体验</string>
    <string name="app_view_description">可自由调整文章字号，段落间距，打造自定义的阅读体验。</string>
    <string name="app_tag_intro">自定义Tag搜索</string>
    <string name="app_tag_description">内置一套较为完整的、以文章内容为主导的Tag系统，与一套支持按Tag关键词进行检索的搜索功能，便于用户对数据库中的作品进行自定义检索，以找到自己希望阅读的文章。</string>
    <string name="app_func_intro">阅读功能完备</string>
    <string name="app_func_description">大书库安卓端功能移植自PC版，在保持功能的同时致力于提供舒适的使用体验。</string>
    <string name="update_log">更新日志</string>
    <string name="app_intro">软件介绍</string>
    <string name="page_jumper_prefix">跳转至</string>
    <string name="page_jumper_suffix">页</string>
    <string name="page_jumper_label">输入页码数</string>
    <string name="page_size_selector_label">选择每页文章数</string>
    <string name="random_article">随机文章</string>
    <string name="change_index_bg">更改首页背景</string>
    <string name="change_app_bar_bg">更改顶栏背景</string>
    <string name="select_from_gallery">从相册中选择壁纸(长按此按钮恢复默认)</string>
    <string name="reset_success">已恢复默认设置</string>
    <string name="restart_info">设置成功！需要重启应用以生效。</string>
    <string name="restart_now">现在重启</string>
    <string name="later">现在不要</string>
    <string name="set_fail">设置失败！</string>
    <string name="reset">恢复默认</string>
    <string name="confirm_reset">确定恢复默认设置吗？此操作不可恢复</string>
    <string name="change_theme">更改主题样式</string>
    <string name="select_in_themes">从预设的主题配色中选取喜欢的主题</string>
    <string name="theme_mcqueen">麦昆紫</string>
    <string name="theme_nga">那我呢</string>
    <string name="theme_white">特别白</string>
    <string name="theme_teal">铃鹿青</string>
    <string name="history">借阅记录</string>
    <string name="export_favorites">导出收藏夹</string>
    <string name="import_favorites">导入到收藏夹</string>
    <string name="export_success">成功导出至：</string>
    <string name="export_fail">导出失败！</string>
    <string name="import_success">导入成功！</string>
    <string name="import_fail">导入失败！</string>
    <string name="import_hint">是否确定将文件导入到收藏夹，这会覆盖当前收藏夹，此操作无法恢复。是否确定导入？</string>
    <string name="import_format_fail">文件格式错误！</string>
    <string name="restart">重启应用</string>
    <string name="appearance_title">外观</string>
    <string name="about">关于</string>
    <string name="other">其他</string>
    <string name="get_online_db_title">在线下载数据库</string>
    <string name="get_online_db">从github托管仓库获取最新数据库文件，此操作需要联网</string>
    <string name="get_online_db_prompt">即将从github托管仓库获取最新数据库文件并覆盖当前数据库，此操作无法恢复。是否确定继续？</string>
    <string name="reload_database_title">重新加载数据库</string>
    <string name="reload_database">重新加载并覆盖当前数据库，以修复数据库版本不一致等问题</string>
    <string name="reload_database_prompt">即将重新加载并覆盖当前数据库，此操作无法恢复。是否确定继续？</string>
    <string name="download_complete">下载已完成</string>

    <string name="template_title">我是标题</string>
    <string name="template_author">我是作者</string>
    <string name="template_translator">我是译者</string>
    <string name="template_upload_time">我是时间</string>
    <string name="template_note">我是简介</string>
    <string name="template_tag">我是标签</string>

    <string name="creator_recommend">作者/译者</string>
    <string name="collection_recommend">长篇/合集</string>
    <string name="series_recommend_description">系列</string>
    <string name="single_work_recommend_description">单篇作品</string>
    <string name="recommend_jump_button_text">查看</string>
    <string name="recommend_unfold_comment">展开评价</string>
    <string name="recommend_fold_comment">折叠评价</string>
    <string name="recommend_dict">用语解释</string>

</resources>