<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_article_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_recommend"
            android:icon="@drawable/ic_baseline_recommend_24"
            android:title="@string/recommend" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_collections_bookmark_24"
            android:title="@string/my_favorites" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_thanks"
            android:icon="@drawable/baseline_volunteer_activism_24"
            android:title="@string/thanks" />
    </group>

    <group android:checkableBehavior="none"
        android:menuCategory="system">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/action_settings"
            />
    </group>
</menu>