<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/check_update"
        android:orderInCategory="100"
        android:title="@string/check_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/update_log"
        android:orderInCategory="100"
        android:title="@string/update_log"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search_settings"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:orderInCategory="100"
        android:title="@string/search_settings"
        app:showAsAction="ifRoom" />
</menu>