<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".ui.setting.SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.UmaLibrary.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/Theme.UmaLibrary.PopupOverlay"
            app:title="@string/action_settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/appearance_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/appearance_title"
                android:textColor="?attr/colorPrimary"
                android:textSize="17sp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.liangguo.preference.views.CommonSettingView
                android:id="@+id/setting_change_index_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                app:icon="@drawable/ic_baseline_insert_photo_24"
                app:layout_constraintTop_toBottomOf="@id/appearance_title"
                app:showEndIcon="false"
                app:subtitle="@string/select_from_gallery"
                app:title="@string/change_index_bg" />

            <com.liangguo.preference.views.CommonSettingView
                android:id="@+id/setting_change_bar_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                app:icon="@drawable/ic_baseline_insert_photo_24"
                app:layout_constraintTop_toBottomOf="@id/setting_change_index_bg"
                app:showEndIcon="false"
                app:subtitle="@string/select_from_gallery"
                app:title="@string/change_app_bar_bg" />

            <com.liangguo.preference.views.CommonSettingView
                android:id="@+id/setting_change_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                app:icon="@drawable/ic_baseline_color_lens_24"
                app:layout_constraintTop_toBottomOf="@id/setting_change_bar_bg"
                app:showEndIcon="false"
                app:subtitle="@string/select_in_themes"
                app:title="@string/change_theme" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/other_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/other"
                android:textColor="?attr/colorPrimary"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/setting_change_theme" />

            <com.liangguo.preference.views.CommonSettingView
                android:id="@+id/setting_reload_database"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                app:icon="@drawable/ic_baseline_chat_24"
                app:layout_constraintTop_toBottomOf="@id/other_title"
                app:showEndIcon="false"
                app:subtitle="@string/reload_database"
                app:title="@string/reload_database_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/about_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/about"
                android:textColor="?attr/colorPrimary"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/setting_reload_database" />

            <com.liangguo.preference.views.CommonSettingView
                android:id="@+id/setting_item_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                app:icon="@drawable/ic_baseline_chat_24"
                app:layout_constraintTop_toBottomOf="@id/about_title"
                app:showEndIcon="false"
                app:subtitle="我有作品想被收录/我不想被收录/我有其他问题？点击这里"
                app:title="反馈" />

            <com.liangguo.preference.views.CommonSettingView
                android:id="@+id/setting_item_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                app:icon="@drawable/ic_github"
                app:layout_constraintTop_toBottomOf="@id/setting_item_feedback"
                app:showEndIcon="false"
                app:subtitle="本软件源代码已在Github公开"
                app:title="开源地址" />

            <com.liangguo.preference.views.CommonSettingView
                android:id="@+id/setting_item_check_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                app:icon="@drawable/ic_baseline_system_update_24"
                app:layout_constraintTop_toBottomOf="@id/setting_item_github"
                app:showEndIcon="false"
                app:subtitle="更新内容往往包括数据库更新/软件功能更新"
                app:title="检查更新" />

            <com.liangguo.preference.views.CommonSettingView
                android:id="@+id/setting_update_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                app:icon="@drawable/ic_baseline_history_24"
                app:layout_constraintTop_toBottomOf="@id/setting_item_check_update"
                app:showEndIcon="false"
                app:subtitle="查看历史更新版本记录"
                app:title="@string/update_log" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>