<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context="cn.umafan.lib.android.ui.recommend.RecommendFragment">

    <com.google.android.material.tabs.TabLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/rec_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creator_recommend" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection_recommend" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/series_recommend_description" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_work_recommend_description" />

    </com.google.android.material.tabs.TabLayout>

<!--    <ExpandableListView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:id="@+id/expandableListView"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/rec_tab"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        tools:listitem="@layout/item_rec_card"-->
<!--        />-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/rec_tab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_article_card" />

</androidx.constraintlayout.widget.ConstraintLayout>