<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context="cn.umafan.lib.android.ui.favorites.FavoritesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_article_card" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/import_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/import_favorites"
        android:tooltipText="@string/import_favorites"
        app:layout_constraintBottom_toTopOf="@id/export_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_cloud_download_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/export_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/export_favorites"
        android:tooltipText="@string/export_favorites"
        app:layout_constraintBottom_toTopOf="@id/last_page_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_cloud_upload_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/last_page_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/last_page"
        android:tooltipText="@string/last_page"
        app:layout_constraintBottom_toTopOf="@id/next_page_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_navigate_before_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next_page_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/next_page"
        android:tooltipText="@string/next_page"
        app:layout_constraintBottom_toTopOf="@id/page_num_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_navigate_next_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/page_num_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/last_page"
        android:text="第 20 页"
        android:textColor="@color/black"
        android:tooltipText="@string/page_num"
        app:backgroundTint="?attr/colorSecondary"
        app:cornerRadius="20dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@null"
        app:srcCompat="@drawable/ic_baseline_navigate_before_24"
        app:strokeColor="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>