<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/page_jumper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/page_jumper_label"
        android:paddingVertical="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:prefixText="@string/page_jumper_prefix"
        app:suffixText="@string/page_jumper_suffix">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/page_jumper_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/page_size_selector"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginHorizontal="10dp"
        android:paddingVertical="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/page_size_selector_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_jumper">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/page_size_selector_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/page_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="4dp"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="false"
        android:orientation="vertical"
        android:paddingVertical="20sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_size_selector"
        app:reverseLayout="false"
        app:spanCount="5"
        tools:listitem="@layout/item_page_button" />


</androidx.constraintlayout.widget.ConstraintLayout>