<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/normal_bg"
    tools:context=".ui.home.HomeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/last_page_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/last_page"
        app:layout_constraintBottom_toTopOf="@id/next_page_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_navigate_before_24"
        android:tooltipText="@string/last_page"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next_page_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/next_page"
        app:layout_constraintBottom_toTopOf="@id/page_num_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_navigate_next_24"
        android:tooltipText="@string/next_page"/>

    <com.google.android.material.button.MaterialButton
        android:textColor="@color/black"
        android:id="@+id/page_num_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/last_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="20dp"
        app:srcCompat="@drawable/ic_baseline_navigate_before_24"
        app:backgroundTint="@color/teal_200"
        android:tooltipText="@string/page_num"
        android:text="第 20 页">

    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>